# c_gtk_testing

./: .gitignore  CMakeLists.txt  app.c
